<resources>
    <string name="app_name">DispatcherCloverAlpha_V2</string>
    <string name="job_name_label">Title:</string>
    <string name="job_name">Title</string>
    <string name="job_description_label">Description:</string>
    <string name="description">Description</string>
    <string name="submit_button">Submit</string>
    <string name="phone_label">Phone #:</string>
    <string name="phone">1234567890</string>
    <string name="address_label">Address:</string>
    <string name="address">123 Apple Street</string>
    <string name="website_label">Website:</string>
    <string name="website">testmerchant.com</string>
    <string name="submit_business">Submit</string>
    <string name="no_account">No account found!</string>
    <string name="businessName">Business Name</string>
    <string name="name_label">Name:</string>
</resources>
