<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_business"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.schoo_000.dispatchercloveralpha_v2.CreateBusiness">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"-->


    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp"
        android:text="@string/phone_label"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phone_label"
        android:layout_alignBottom="@+id/phone_label"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/phone_label"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone"
        android:textSize="24sp"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/address"
        android:textSize="24sp"
        android:text="@string/address"
        android:layout_alignBaseline="@+id/address_label"
        android:layout_alignBottom="@+id/address_label"
        android:layout_alignStart="@+id/phone"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/website"
        android:text="@string/website"
        android:textSize="24sp"
        android:layout_marginStart="13dp"
        android:layout_alignBaseline="@+id/email_label"
        android:layout_alignBottom="@+id/email_label"
        android:layout_toEndOf="@+id/email_label"
        tools:ignore="LabelFor" />

    <Button
        android:text="@string/submit_business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="25dp"
        android:onClick="registerBusiness"
        android:id="@+id/submit_business" />

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/address_label"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_business"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="57dp"
        android:text="@string/website_label"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/businessName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/phone"
        android:layout_marginTop="14dp"
        android:inputType="text"
        android:text="Business Name"
        android:textSize="24sp"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/name_label"
        android:labelFor="@id/businessName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/businessName"
        android:layout_alignBottom="@+id/businessName"
        android:layout_alignParentStart="true"
        android:text="@string/name_label"
        android:textSize="24sp" />


</RelativeLayout>
