<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_job"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.schoo_000.dispatchercloveralpha_v2.CreateJob">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"-->


    <TextView
        android:id="@+id/job_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/job_name"
        android:layout_alignBottom="@+id/job_name"
        android:layout_alignParentStart="true"
        android:enabled="true"
        android:text="@string/job_name_label"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/job_name"
        android:ems="10"
        android:layout_marginStart="36dp"
        android:id="@+id/job_name"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textColor="?android:attr/textColorSecondaryInverseNoDisable"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/job_name_label" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="sendJobInfo"
        android:text="@string/submit_button"
        android:textSize="24sp" />
        android:layout_alignEnd="@+id/job_name" />

    <TextView
        android:id="@+id/job_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="48dp"
        android:text="@string/job_description_label"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:text="@string/description"
        android:textSize="18sp" />

</RelativeLayout>